<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:background="@color/lg_d1d1d1"
                                     android:orientation="vertical">

    <include layout="@layout/view_title"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:layout_marginTop="70px"
        android:background="@color/lg_ffffff"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="70px"
            android:layout_marginRight="30px"
            android:gravity="center_vertical"
            android:text="@string/lg_account_number"
            android:textColor="@color/lg_000000"
            android:textSize="44px"
            />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:maxLength="11"
            android:gravity="center_vertical"
            android:hint="@string/lg_account_number_hint"
            android:inputType="phone"
            android:textColor="@color/lg_d1d1d1"
            android:textSize="44px"
            />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:layout_marginTop="20px"
        android:background="@color/lg_ffffff"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="70px"
            android:layout_marginRight="30px"
            android:gravity="center_vertical"
            android:text="@string/lg_password"
            android:textColor="@color/lg_000000"
            android:textSize="44px"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/lg_password_hint"
            android:maxLength="20"
            android:inputType="textPassword"
            android:textColor="@color/lg_d1d1d1"
            android:textSize="44px"
            />
    </com.zhy.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70px"
        android:background="@drawable/bt_lg"
        android:text="@string/lg_login"
        android:textColor="@color/lg_ffffff"
        android:textSize="44px"
        />

    <TextView
        android:id="@+id/tx_wangji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="220px"
        android:layout_marginRight="70px"
        android:text="@string/lg_wangji"
        android:textColor="@color/lg_584f60"
        android:textSize="44px"
        />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140px"
            android:src="@mipmap/line"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:text="@string/lg_lgtype"
            android:textColor="@color/lg_584f60"
            android:textSize="44px"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="140px"
            android:src="@mipmap/line"/>

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240px"
        android:layout_marginRight="240px"
        android:orientation="horizontal"
        >

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/lin_wb_longin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="50px"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30px"
                android:src="@mipmap/lg_xl"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg_wb"
                android:textColor="@color/lg_584f60"
                android:textSize="44px"
                />
        </com.zhy.autolayout.AutoLinearLayout>


        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/lin_qq_longin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="50px"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30px"
                android:src="@mipmap/lg_qq"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg_qq"
                android:textColor="@color/lg_584f60"
                android:textSize="44px"
                />


        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/lin_wx_longin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="50px"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30px"
                android:src="@mipmap/lg_wx"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg_wx"
                android:textColor="@color/lg_584f60"
                android:textSize="44px"
                />


        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>


</com.zhy.autolayout.AutoLinearLayout>